tests/NormalTests/paczka1/fuzzy1/34622509.err
Error in line 11: S754 S754 55,5
Error in line 18: S754 A74 97,0
Error in line 25: XgkJoRo01jC S207 80,9
Error in line 21: S754 S207 24,6
Error in line 29: XgkJoRo01jC A74 144,5
Error in line 35: 14Cr S754 38,6
